force-app/main/default/objects/Retrospective__c/Retrospective__c.object-meta.xml
<CustomObject>
    <label>Retrospective</label>
    <nameField>
        <displayFormat>RET-{0000}</displayFormat>
        <label>Retrospective Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retrospectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>