force-app/main/default/objects/Retrospective__c/fields/Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Descriptor__c</fullName>
    <label>Descriptor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Going Well</fullName>
            </value>
            <value>
                <fullName>Not Going Well</fullName>
            </value>
            <value>
                <fullName>Start Doing</fullName>
            </value>
            <value>
                <fullName>Stop Doing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>