force-app/main/default/objects/Retrospective__c/fields/Votes__c.field-meta.xml
<CustomField>
    <fullName>Votes__c</fullName>
    <label>Votes</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>